--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CourseFinalProjectContext": "Server=(localdb)\\mssqllocaldb;Database=CourseFinalProjectContext-dfc279aa-fd7c-44ab-a20f-1a307de24140;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CourseFinalProjectContext": "Sserver=localhost;userid=Developer;password=894261;database=saleswebmvcappdb"
   }
 }
